--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=wN29MzukIwF__5jAlvOilx4dmU5unLt_
 DRIVE_DISK=local
+DB_CONNECTION=sqlite
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
